[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "solana-ledger-tool"
description = "Blockchain, Rebuilt for Scale"
version = "1.8.14"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-ledger-tool"

[dependencies]
bs58 = "0.3.1"
bytecount = "0.6.0"
clap = "2.33.1"
csv = "1.1.3"
dashmap = "4.0.2"
futures = "0.3.8"
futures-util = "0.3.5"
histogram = "*"
itertools = "0.9.0"
log = { version = "0.4.11" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
serde_yaml = "0.8.13"
solana-clap-utils = { git = "https://github.com/solindex/clap-utils.git", version = "=1.8.14" }
solana-cli-output = { git = "https://github.com/solindex/cli-output.git", version = "=1.8.14" }
solana-core = { git = "https://github.com/solindex/core.git", version = "=1.8.14" }
solana-ledger = { git = "https://github.com/solindex/ledger.git", version = "=1.8.14" }
solana-logger = { git = "https://github.com/solindex/logger.git", version = "=1.8.14" }
solana-measure = { git = "https://github.com/solindex/measure.git", version = "=1.8.14" }
solana-runtime = { git = "https://github.com/solindex/runtime.git", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
solana-stake-program = { git = "https://github.com/solindex/programs.git", version = "=1.8.14" }
solana-storage-bigtable = { git = "https://github.com/solindex/storage-bigtable.git", version = "=1.8.14" }
solana-transaction-status = { git = "https://github.com/solindex/transaction-status.git", version = "=1.8.14" }
solana-version = { git = "https://github.com/solindex/version.git", version = "=1.8.14" }
solana-vote-program = { git = "https://github.com/solindex/programs.git", version = "=1.8.14" }
tempfile = "3.1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"

[target."cfg(unix)".dependencies]
signal-hook = "0.1.15"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
